Finalized budget and transaction backend, MVP ready